responsive desgin complete, isLandscape check => alert user to rotate phone, fullscreen fixed on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* fonts */
+
 @font-face {
   font-family: Lunar Escape;
   src: url("fonts/Lunar Escape.otf");
@@ -7,22 +9,7 @@
   src: url("fonts/Hyper Oxide.ttf");
 }
 
-canvas {
-  box-shadow: 20px 10px 50px black;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 100%;
-  max-height: 100%;
-}
-
-h1 {
-  margin: 10px;
-  font-size: 2.5em;
-  font-family: Helvetica, Arial, sans-serif;
-  text-align: center;
-}
+/* body */
 
 body {
   padding: 0;
@@ -35,13 +22,92 @@ body {
   align-items: center;
 }
 
+/* überschrift */
+
+h1 {
+  margin: 10px;
+  font-size: 3rem;
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
+/* Dropdown */
+
+#dropdown-container {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  padding: 10px;
+  font-size: 1rem;
+  background-color: rgba(128, 128, 128, 0.171);
+  width: 32px;
+  height: 32px;
+  border-radius: 20px;
+  transition: all 0.6s ease;
+}
+
+#dropdown-container .content {
+  display: none;
+  flex-direction: column;
+}
+
+#dropdown-container:hover {
+  height: auto;
+  width: 16%;
+}
+
+#dropdown-container:hover .content {
+  display: flex;
+}
+
+#dropdown-container button {
+  font-family: monospace;
+  font-size: 1.5rem;
+  color: black;
+  background: hsla(0, 0%, 100%, 0.255);
+  border: none;
+  border-radius: 10px;
+  box-shadow: 3px 3px hsla(0, 0%, 60%, 0.2);
+  cursor: pointer;
+  width: 89%;
+  height: 5rem;
+  margin: 10px auto;
+}
+
+#dropdown-container button:active {
+  box-shadow: none;
+  transform: translate(3px, 3px);
+}
+
+/* Logo */
+
+#podcastLogo {
+  mix-blend-mode: multiply;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 14, 58%;
+  height: 15%;
+}
+/* canvas + restart BTN */
+
+canvas {
+  box-shadow: 20px 10px 50px black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+}
+
 #restartBtn {
   display: none;
   position: absolute;
   top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1.5em;
+  font-size: 2.8em;
   font-family: Hyper Oxide;
   background: transparent;
   border-radius: 25px;
@@ -59,67 +125,17 @@ body {
   color: white;
 }
 
-#dropdown-container {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  padding: 8px;
-  font-size: 1.2em;
-  background-color: rgba(128, 128, 128, 0.171);
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  transition: all 0.6s ease;
-}
-
-#dropdown-container .content {
-  display: none;
-  flex-direction: column;
-}
-
-#dropdown-container:hover {
-  height: auto;
-  width: 150px;
-}
-
-#dropdown-container:hover .content {
-  display: flex;
-}
-
-#dropdown-container button {
-  font-family: monospace;
-  font-size: 1em;
-  color: black;
-  background: hsla(0, 0%, 100%, 0.255);
-  border: none;
-  border-radius: 10px;
-  box-shadow: 3px 3px hsla(0, 0%, 100%, 0.2);
-  cursor: pointer;
-  width: 90%;
-  height: 40px;
-  margin: 10px auto;
-}
-
-#dropdown-container button:active {
-  box-shadow: none;
-  transform: translate(3px, 3px);
-}
-
-#podcastLogo {
-  mix-blend-mode: multiply;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: auto;
-  max-height: 80px;
-}
+/* footer */
 
 #sign {
   position: absolute;
-  bottom: 10px;
+  bottom: 0;
+  margin-bottom: 2px;
   right: 10px;
-  font-size: 0.8em;
+  font-size: 1.2rem;
 }
+
+/* links */
 
 a {
   text-decoration: none;
@@ -130,35 +146,65 @@ a:visited {
   color: inherit;
 }
 
-/* Responsive Design */
+/* Responsive Design  */
+@media (max-width: 1200px) {
+  canvas {
+    box-shadow: none;
+    max-width: 80%;
+    max-height: 70%;
+  }
+  #restartBtn {
+    font-size: 1.5rem;
+    padding: 15px;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  #dropdown-container {
+    max-width: 20%;
+  }
+  #dropdown-container button {
+    font-size: 1rem;
+    padding: 4px;
+  }
+}
+
 @media (max-width: 768px) {
   h1 {
-    font-size: 2em;
+    font-size: 1.5em;
+  }
+  canvas {
+    box-shadow: none;
+    max-width: 80%;
+    max-height: 80%;
   }
 
   #restartBtn {
-    font-size: 1.2em;
+    font-size: 2em;
     padding: 15px;
   }
 
-  #dropdown-container {
-    width: 35px;
-    height: 35px;
-    font-size: 1em;
-  }
-
   #podcastLogo {
-    max-height: 60px;
+    max-height: 8%;
   }
 
   #sign {
     font-size: 0.7em;
+  }
+  #dropdown-container {
+    max-width: 10%;
+  }
+  #dropdown-container button {
+    font-size: 0.6rem;
+    padding: 2px;
   }
 }
 
 @media (max-width: 480px) {
   canvas {
     box-shadow: none;
+    max-width: 80%;
+    max-height: 80%;
   }
 
   h1 {
@@ -167,18 +213,5 @@ a:visited {
 
   #restartBtn {
     font-size: 1em;
-  }
-
-  #dropdown-container {
-    width: 30px;
-    height: 30px;
-  }
-
-  #podcastLogo {
-    max-height: 50px;
-  }
-
-  #sign {
-    font-size: 0.6em;
   }
 }
